--- a/BlogSolution.API/appsettings.json
+++ b/BlogSolution.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BlogSolutionDb": "Server=.;Database=BlogSolution;User ID=sa;Password=Drakocadic015900"
+    "BlogSolutionDb": "Server=.;Database=BlogSolution;User ID=sa;Password=123123"
   },
   "Logging": {
     "LogLevel": {
