--- a/BlogSolution.Data/appsettings.json
+++ b/BlogSolution.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "BlogSolutionDb": "Server=.;Database=BlogSolution;User ID=sa;Password=Drakocadic015900"
+    "BlogSolutionDb": "Server=.;Database=BlogSolution;User ID=sa;Password=123123"
   }
 }
